Fri Nov 28 15:24:00 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Bug_3506_Regression/*:
          New reproducer for a problem with Any/TypeCodes. This existed in
          an older version but already got fixed. Just adding the regression
          test to make sure we don't break this usage

Fri Nov 28 14:34:00 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/ORB.inl:
        * tao/ORB_Core.inl:
          Fixed compile errors

Fri Nov 28 12:39:00 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Collocation_Tests/run_test.pl:
        * tests/Native_Exceptions/run_test.pl:
        * tests/Servant_To_Reference_Test/run_test.pl:
        * tests/Server_Port_Zero/run_test.pl:
        * tests/AMH_Exceptions/run_test.pl:
          Fixed fuzz errors/warnings

Fri Nov 28 11:27:00 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Abstract_Interface/run_test.pl
        * tests/AMH_Exceptions/client.cpp
        * tests/AMH_Exceptions/run_test.pl
        * tests/AMH_Exceptions/server.cpp
        * tests/Any/Recursive/run_test.pl
        * tests/Bug_1020_Regression/run_test.pl
        * tests/Bug_1254_Regression/run_test.pl
        * tests/Bug_1670_Regression/run_test.pl
        * tests/Bug_1676_Regression/run_test.pl
        * tests/Bug_2188_Regression/run_test.pl
        * tests/Bug_2319_Regression/run_test.pl
        * tests/Bug_2319_Regression/server.cpp
        * tests/Bug_2328_Regression/run_test.pl
        * tests/Bug_2349_Regression/run_test.pl
        * tests/Bug_2356_Regression/run_test.pl
        * tests/Bug_2417_Regression/run_test.pl
        * tests/Bug_2429_Regression/run_test.pl
        * tests/Bug_2503_Regression/run_test.pl
        * tests/Bug_2560_Regression/run_test.pl
        * tests/Bug_2595_Regression/run_test.pl
        * tests/Bug_2654_Regression/run_test.pl
        * tests/Bug_2702_Regression/run_test.pl
        * tests/Bug_2804_Regression/run_test.pl