@@ -27,7 +27,7 @@ $server->DeleteFile($iorbase);
 $client->DeleteFile($iorbase);
 
 $SV = $server->CreateProcess ("server", "-ORBdebuglevel $debug_level -o $server_iorfile");
-$CL = $client->CreateProcess ("client", "-k file://$client_iorfile");
+$CL = $client->CreateProcess ("client", "file://$client_iorfile");
 $server_status = $SV->Spawn ();
 
 if ($server_status != 0) {
